--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,9 @@ projects_url: http://github.com/probberechts
 nav:
   home: /
   about: /about/
-  articles: /archives/
-  projects: projects_url
+  write-ups: /writeups/
+  search: /Search/
+  contacts: /contacts/
 
 
 # Links to your social media accounts.
@@ -23,11 +24,10 @@ nav:
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: http://github.com/probberechts/cactus-dark
-  twitter: /
-  facebook: /
-  linkedin: /
-  mail: mailto:name@email.com
+  github: https://github.com/cesena
+  twitter: https://twitter.com/cesenasec
+  facebook: https://www.facebook.com/groups/105136176187559
+  mail: mailto:cesena.team@gmail.com
 
 
 # Customize the overview with the most recent blog posts on the index page.
@@ -53,7 +53,7 @@ posts_overview:
 logo:
   enabled: true
   width: 50
-  height: 50
+  height: 57
   url: /images/logo.png
   gravatar: false
 
@@ -87,7 +87,7 @@ highlight: rainbow
 colorscheme: dark
 
 # Maximal width of the page in rem units.
-page_width: 48
+page_width: 58
 
 
 ##############################################################################
@@ -95,7 +95,7 @@ page_width: 48
 ##############################################################################
 
 # Enable or disable the RSS feed.
-rss: false
+rss:
 
 # Turn your web pages into graph objects (see http://ogp.me).
 open_graph: 
@@ -122,4 +122,4 @@ google_analytics:
 # Fill in you Gravatar user id / email if you want to use your gravatar as the
 # logo and/or favicons of you website.
 gravatar:
-  email: name@email.com
+  email: cesena.team@gmail.com
