--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ nav:
   about: /about/
   write-ups: /writeups/
   search: /Search/
+  contacts: /contacts/
 
 
 # Links to your social media accounts.
