--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ nav:
   write-ups: /writeups/
   search: /Search/
   contacts: /contacts/
+  feed: /atom.xml
 
 
 # Links to your social media accounts.
