update from upstream

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ nav:
   home: /
   about: /about/
   write-ups: /writeups/
+  archive: /archives/
   search: /Search/
   contacts: /contacts/
   feed: /atom.xml
