--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ nav:
   about: /about/
   write-ups: /writeups/
   archive: /archives/
+  events: /events/
   search: /Search/
   contacts: /contacts/
   feed: /atom.xml
