--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ social_links:
   github: https://github.com/cesena
   twitter: https://twitter.com/cesenasec
   facebook: https://www.facebook.com/groups/105136176187559
+  instagram: https://www.instagram.com/cesenasecurity
   mail: mailto:cesena.team@gmail.com
 
 # Customize the overview with displaying a tagcloud on the index page.
