--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ tags_overview: false
 posts_overview:
   show_all_posts: false
   post_count: 20
-  sort_updated: true
+  sort_updated: false
 
 # Customize the archive view.
 # Options:
@@ -61,7 +61,7 @@ archive:
 # Options:
 #   - show_updated: show the last modification date.
 post:
-  show_updated: true
+  show_updated: false
 
 ##############################################################################
 # Look and Feel
